@@ -19,13 +19,12 @@
 #include <stdarg.h> 
 #include <stdio.h> 
 
-#ifdef __ppc__
-#include "ppc32/siever-config.h"
-#define asm_modinv32(x) modinv32(x)
-#else
-#include "asm/lasieve-asm.h"
-#endif
+#include "asm/siever-config.h"
 #include "if.h"
+
+#ifdef __ppc__
+#define asm_modinv32(x) modinv32(x)
+#endif
 
 #ifdef _MSC_VER
 double rint(double);
